# lesion-tracking

./: .gitignore  README.md  pyproject.toml
conf/: config.yaml
conf/dataset/: default.yaml
conf/loader/: default.yaml
conf/model/: default.yaml
conf/preprocessing/: default.yaml
conf/training/: default.yaml
jobs/: sweep.wilkes3
outputs/: describe_dataset.csv
scripts/: annotate_tracking.py  describe_dataset.py  explore_icon8.py  gen_seg_gifs.py  migrate_metadata.py  try_normalization.py  view_scan.py
scripts/graph-based-modelling/: demo.py
scripts/lesion-locator/: analyze_metrics.py  compute_metrics.py  prepare_data.py  render_special_cases.sh  run_eval.wilkes3  run_pipeline.wilkes3  run_segment.py  run_track.py  screenshot_slides_04_03_26.sh  view_predictions.py
src/lesion_tracking/: __init__.py  config.py  dataset.py  logger.py  model.py
src/lesion_tracking/conf/dataset/: default.yaml
src/lesion_tracking/conf/experiment/: arch_sweep_base.yaml  single_tp.yaml  single_tp_rope.yaml  two_tp_concat.yaml  two_tp_cross_attn.yaml  two_tp_diff.yaml  two_tp_mean.yaml
src/lesion_tracking/conf/loader/: default.yaml
src/lesion_tracking/conf/preprocessing/: default.yaml
src/lesion_tracking/dataset/: config.py  dataset.py
src/lesion_tracking/model/: classifier.py  config.py  functional.py  modules.py
src/lesion_tracking/training/: config.py  populate_cache.py  trainer.py
