[project]
name = "lesion-tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Felipe Coutinho", email = "fcoelho.mrc@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
  "monai",
  "nibabel",
  "napari[all]",
  "torch",
  "torchvision",
  "lightning",
  "rich",
  "matplotlib",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[project.scripts]
lesion-tracking = "lesion_tracking:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
