[project]
name = "lesion-tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Felipe Coutinho", email = "fcoelho.mrc@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
  "monai",
  "nibabel",
  "napari[all]",
  "torch",
  "torchvision",
  "lightning",
  "rich",
  "matplotlib",
  "connected-components-3d>=3.26.1",
  "einops>=0.8.2",
  "scikit-learn>=1.8.0",
  "ipython>=9.9.0",
  "transformers>=5.1.0",
  "torchmetrics>=1.8.2",
  "simpleitk>=2.5.3",
  "hydra-core>=1.3.2",
  "openpyxl>=3.1.5",
  "wandb>=0.25.0",
  "pydicom>=3.0.1",
]

[project.optional-dependencies]
lesion-locator = ["lesionlocator @ git+https://github.com/MIC-DKFZ/LesionLocator"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[project.scripts]
lesion-tracking = "lesion_tracking:main"
lesion-tracking-train = "lesion_tracking.training.trainer:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
